Update README to include Solaris instructions
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@217 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/README
+++ b/README
@@ -22,3 +22,9 @@ FreeBSD:
 Requires that the TAP driver is loaded to the system. This can usually be done
 by running the command "kldload if_tap" as root.
 
+Solaris:
+
+Requires that TAP driver is installed to the system. It can be downloaded from
+http://www.whiteboard.ne.jp/~admin2/tuntap/ or installed using pkg-get with the
+command "pkg-get install tap".
+
