Add a line to todo list
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@242 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 
+- Check that it works nicely with Windows computers without IPv6
 - Move solaris plumbing to own function and when checking for available device, try complete plumbing
 - Port to work on NetBSD, at least address setting should be SIOCSIFPHYADDR
 
