Add NetBSD to the readme
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@258 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/README
+++ b/README
@@ -22,6 +22,10 @@ FreeBSD:
 Requires that the TAP driver is loaded to the system. This can usually be done
 by running the command "kldload if_tap" as root.
 
+NetBSD:
+
+Should work when ran as root without problems.
+
 Solaris:
 
 Requires that TAP driver is installed to the system. It can be downloaded from
