Update the ChangeLog file
git-svn-id: http://tapcfg.googlecode.com/svn/trunk@316 2f5d681c-ba19-11dd-a503-ed2d4bea8bb5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 * Small change in DLPI handling related to physaddr length
 * Updates to the SCons build system scripts related to Mac OS X
 * Redefine the TAPCFG_STATUS flags for flexibility, breaks API
+* Some OSX 10.4 defines not available on 10.5, fix handling
 
 Version 0.9.0
 -------------
