--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,21 @@
 
+Version 0.9.0
+-------------
+
+* Several small fixes and cleanups around the code and SCons
+* Add AssemblyInfo in .NET bindings to include some metadata
+* Support setting the log level aos in managed .NET bindings
+* Fix bugs in EthernetFrame and add some new header values
+* Drop support for Windows 2000, easy to re-enable in Scons
+* Fix crashes on 32-bit Windows by defining calling convention
+* Add a Start method on VirtualDevice that only takes the name
+* Add a tapcfg_get_version function for checking library version
+* Export only the API functions when compiling a Windows DLL
+* Do not allocate tapcfg_get_ifname return value from heap
+* Ignore the "Properties" registry key on Windows registry
+* Add logging level to the log callback for info, breaks API
+* Marshal UTF-8 strings manually to avoid problems with runtime
+* Update the SCons build system related to 64-bit Windows
 * Simplify the Solaris implementation by removing SIOCSIFBRDADDR
 * Fix getting hwaddress on some older versions of Linux kernel
 * Rename function tapcfg_iface_change_status, breaks API
